Bug fix: modal preview close not showing on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -44,7 +44,7 @@
    ========================= */
 .modal__close-btn,
 #preview-modal .modal__close-btn,
-.modal__close-btn .modal__close_type-preview {
+.modal__close-btn .modal__close-btn_type_preview {
   background: transparent url("../images/whiteclose.svg") center center no-repeat;
   background-size: 40px 40px;
   border: none;
@@ -67,13 +67,13 @@
 }
 
 #preview-modal .modal__close-btn,
-.modal__close-btn.modal__close_type-preview {
+.modal__close-btn.modal__close-btn_type_preview {
   background-image: url("../images/whiteclose.svg");
 }
 
 .modal__close-btn:hover,
 #preview-modal .modal__close-btn:hover,
-.modal__close-btn.modal__close_type-preview:hover {
+.modal__close-btn.modal__close-btn_type_preview:hover {
   opacity: 0.4;
 }
 
@@ -85,7 +85,7 @@
   position: relative;
 }
 
-.modal__close-btn.modal__close_type-preview {
+.modal__close-btn.modal__close-btn_type_preview {
   transition: .3s ease;
   top: 0;
   right: -48px;
